--- a/css/style.css
+++ b/css/style.css
@@ -312,6 +312,7 @@ color:rgb(255, 255, 255);
     justify-content: center;
     align-items: center;
     
+    
 }
 .cardsec .imgsec{
     width: 100%;
@@ -321,6 +322,7 @@ color:rgb(255, 255, 255);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+ 
 }
 .cardsec .textsec
 {
@@ -346,15 +348,279 @@ color:rgb(255, 255, 255);
  
 }
 
+.section3{
+    width: 100%;
+    height: 100vh;
+    /* background-image: url(/images/bg2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.45; */
+    position: relative;
+   
+}
+.section3::before {    
+    content: "";
+    background-image: url(/images/bg2.png);
+    background-size: cover;
+    position: absolute;
+    background-position: center;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.35;
+}
+
+
+ .headersec{
+    width: 100%;
+    height: 30%;
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.text-blue-color{
+    color: #4F9A94;
+}
+
+.cardcircle{
+    width: 300px;
+    height: 300px;
+    position: absolute;
+  border-radius: 100%;
+  border: 4px solid #4F9A94;
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  
+}
+
+.section4{
+    width: 100%;
+    height:100vh;
+display: flex;
+
+
+}
+.leftsec{
+    width: 50%;
+    height:100vh;
+    background-color: #4F9A94;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.textsec4{
+  
+        width: 80%;
+        height:80%;
+    
+        background-color: #4F9A94;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+   
+}
+
+.rightsec{
+    width: 50%;
+    height:100vh;
+    background-image: url(/images/yogagirl3.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.text-p-width{
+   padding: 0;
+    font-size: 15px;
+    text-align:left;
+    width: 100%;
+    color: #ffffff;
+    font-weight: 100;
+}
+.text-h1-width{
+    font-size: 70px;
+    color: #ffffff;
+}
+
+.readbtn {
+    margin-top: 30px;
+    width: 200px;
+    height: 40px;
+    color: #4F9A94;
+    font-family: 'Baloo 2', cursive;
+
+    font-family: 'Caveat', cursive;
+
+    font-family: 'Dosis', sans-serif;
+
+    font-family: 'Fuzzy Bubbles', cursive;
+
+    font-family: 'Raleway Dots', cursive;
+
+    font-family: 'Signika', sans-serif;
+}
+.readbtn2 {
+background-color: #4F9A94;
+color:#ffffff;
+
+}
+
+.section5{
+    width: 100%;
+    height:100vh;
+display: flex;
+flex-direction: row-reverse;
+position: relative;
+}
+.section5 .rightsec{
+    width: 50%;
+    height:100vh;
+    background-image: url(/images/girl2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 80% 90%;
+}
 
 
 
 
+.section5 .leftsec{
+    width: 50%;
+    height:100vh;
+background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.section5 .leftsec::before {    
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-image: url(/images/design1.png);
+    background-size: 60% 90%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position:center;
+    top: 50px;
+    right: 0px;
+    bottom: 0px;
+    left: 800px;
+    z-index: 9;
+    opacity: 0.85;
+}
 
 
 
+.section5 .textsec4{
+  
+        width: 80%;
+        height:80%;
+    
+        background-color: transparent;
+        
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+   
+}
+.section5  .text-p-width{
+    padding: 0;
+     font-size: 15px;
+     text-align:left;
+     width: 100%;
+     color: #4F9A94;
+     font-weight: 100;
+     z-index: 99;
+ }
+ .section5  .text-h1-width{
+     font-size: 70px;
+     color: #4F9A94;
+     z-index: 99;
+ }
+ 
+ .section6{
+    width: 100%;
+    height: 100vh;
+    /* background-image: url(/images/bg2.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    opacity: 0.45; */
+    position: relative;
+    background-color: #4F9A94;
+ }
 
+.pricecard{
+    width:80% ;
+    height: 80%;
+    background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 6px;
 
+}
+.name-price-sec{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ 
+    flex-direction: column;
+}
+.price-img-sec{
+    width: 100%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.btn-p-sec{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   
+    width: 100%;
+    height: 30%;
+}
+.pricecard .textp{
+width: 100%;
+}
+.regiterbtn{
+    
+    width: 80%;
+    height: 40px;
+    background-color: #4F9A94;
+    color:#ffffff;
+    font-family: 'Baloo 2', cursive;
+
+    font-family: 'Caveat', cursive;
+
+    font-family: 'Dosis', sans-serif;
+
+    font-family: 'Fuzzy Bubbles', cursive;
+
+    font-family: 'Raleway Dots', cursive;
+
+    font-family: 'Signika', sans-serif;
+    border-radius: 4px;
+}
 
 
 /******************************************************************************************************************/
@@ -606,7 +872,7 @@ color:rgb(255, 255, 255);
         font-family: 'Signika', sans-serif;
     }
     
-    .cardsec{
+ .cardsec{
         width:100% ;
         height:400px;
      
@@ -614,7 +880,7 @@ color:rgb(255, 255, 255);
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        
+       
     }
     .cardsec .imgsec{
         width: 60%;
@@ -624,6 +890,7 @@ color:rgb(255, 255, 255);
         flex-direction: column;
         justify-content: center;
         align-items: center;
+       
     }
     .cardsec .textsec
     {
