--- a/css/style.css
+++ b/css/style.css
@@ -362,7 +362,7 @@ color:rgb(255, 255, 255);
 }
 .section3::before {    
     content: "";
-    background-image: url(/images/bg2.png);
+    background-image: url(../images/bg2.png);
     background-size: cover;
     position: absolute;
     background-position: center;
@@ -434,7 +434,7 @@ display: flex;
 .rightsec{
     width: 50%;
     height:100vh;
-    background-image: url(/images/yogagirl3.png);
+    background-image: url(../images/yogagirl3.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -486,7 +486,7 @@ position: relative;
 .section5 .rightsec{
     width: 50%;
     height:100vh;
-    background-image: url(/images/girl2.png);
+    background-image: url(../images/girl2.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 80% 90%;
@@ -508,7 +508,7 @@ background-color: #fff;
     content: "";
     width: 100%;
     height: 100%;
-    background-image: url(/images/design1.png);
+    background-image: url(../images/design1.png);
     background-size: 60% 90%;
     position: absolute;
     background-repeat: no-repeat;
@@ -637,7 +637,7 @@ width: 100%;
 }
 .section7::before {    
     content: "";
-    background-image: url(/images/bg2.png);
+    background-image: url(../images/bg2.png);
     background-size: cover;
     position: absolute;
     background-position: center;
@@ -1205,7 +1205,7 @@ text-align: left;
     }
     .section3::before {    
         content: "";
-        background-image: url(/images/bg2.png);
+        background-image: url(../images/bg2.png);
         background-size: cover;
         position: absolute;
         background-position: center;
@@ -1304,7 +1304,7 @@ text-align: left;
     .rightsec{
         width: 100%;
         height:50%;
-        background-image: url(/images/yogagirl3.png);
+        background-image: url(../images/yogagirl3.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -1356,7 +1356,7 @@ text-align: left;
     .section5 .rightsec{
         width: 100%;
         height:50%;
-        background-image: url(/images/girl2.png);
+        background-image: url(../images/girl2.png);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 80% 90%;
@@ -1380,7 +1380,7 @@ text-align: left;
         content: "";
         width: 100%;
         height: 100%;
-        background-image: url(/images/design1.png);
+        background-image: url(../images/design1.png);
         background-size: 60% 90%;
         position: absolute;
         background-repeat: no-repeat;
